tests/bad/sintax1.nx
// instruções devem acabar com ';'

var x := int 12